--- a/web/components/main/main.html
+++ b/web/components/main/main.html
@@ -15,13 +15,13 @@
         <div class="col-md-6">
             <div class="box box-default">
                 <div class="box-header with-border">
-                    <h3 class="box-title">ECC</h3>
+                    <h3 class="box-title">ACC</h3>
                 </div>
                 <div class="box-body">
                     <canvas id="myChart"></canvas>
                 </div><!-- /.box-body -->
                 <!-- Loading (remove the following to stop the loading)-->
-                <div class="overlay">
+                <div class="overlay" id="acc-graph-overlay">
                     <i class="fa fa-refresh fa-spin"></i>
                 </div>
                 <!-- end loading -->
@@ -32,30 +32,34 @@
 <script type="text/javascript">
     Chart.defaults.global.responsive = true;
     var ctx = $("#myChart").get(0).getContext("2d");
-    var data = {
-    labels: [0,1,2,3,4,5,6,7,8,9,10],
-    datasets: [
-        {
-            label: "My First dataset",
-            fillColor: "rgba(220,220,220,0.2)",
-            strokeColor: "rgba(220,220,220,1)",
-            pointColor: "rgba(220,220,220,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(220,220,220,1)",
-            data: [65, 59, 80, 81, 56, 55, 40]
-        },
-        {
-            label: "My Second dataset",
-            fillColor: "rgba(151,187,205,0.2)",
-            strokeColor: "rgba(151,187,205,1)",
-            pointColor: "rgba(151,187,205,1)",
-            pointStrokeColor: "#fff",
-            pointHighlightFill: "#fff",
-            pointHighlightStroke: "rgba(151,187,205,1)",
-            data: [28, 48, 40, 19, 86, 27, 90]
+    $.getJSON( "../rest/api/data/hr/test/20", function( response ) {
+        console.log(response);
+        var data = {
+            labels:[],
+            datasets: [
+                {
+                    label: "Heart Rate",
+                    fillColor: "rgba(220,220,220,0.2)",
+                    strokeColor: "rgba(220,220,220,1)",
+                    pointColor: "rgba(220,220,220,1)",
+                    pointStrokeColor: "#fff",
+                    pointHighlightFill: "#fff",
+                    pointHighlightStroke: "rgba(220,220,220,1)",
+                    data: response.data
+                },
+            ]
+        };
+        for (i=0; i<response.results;i++) {
+            data.labels.push(i);
         }
-    ]
-};
-    var myLineChart = new Chart(ctx).Line(data);
+        var options = {
+            scaleShowGridLines : false,
+            pointDot: false,
+            bezierCurve: false,
+            showScale:false,
+
+        }
+        var myLineChart = new Chart(ctx).Line(data, options);
+        $('#legendDiv').hide();
+    }).done($('#acc-graph-overlay').hide());
 </script>
