--- a/web/components/main/main.html
+++ b/web/components/main/main.html
@@ -12,54 +12,30 @@
     <!-- Main content -->
 <section class="content">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12">
             <div class="box box-default">
                 <div class="box-header with-border">
-                    <h3 class="box-title">ACC</h3>
+                    <h3 class="box-title">Heart Rate Plot</h3>
                 </div>
                 <div class="box-body">
-                    <canvas id="myChart"></canvas>
+                    <div id="hr-plot" style="width:100%;height:300px"></div>
                 </div><!-- /.box-body -->
-                <!-- Loading (remove the following to stop the loading)-->
-                <div class="overlay" id="acc-graph-overlay">
+                <!-- Loading (remove the following to stop the loading) -->
+                <div class="overlay" id="hr-plot-overlay">
                     <i class="fa fa-refresh fa-spin"></i>
                 </div>
                 <!-- end loading -->
             </div><!-- /.box -->
         </div> 
+        
+        
     </div>
+    
+    
 </section>
 <script type="text/javascript">
-    Chart.defaults.global.responsive = true;
-    var ctx = $("#myChart").get(0).getContext("2d");
-    $.getJSON( "../rest/api/data/hr/test/20", function( response ) {
+    $.getJSON( "../rest/api/data/hr/test/2000", function( response ) {
         console.log(response);
-        var data = {
-            labels:[],
-            datasets: [
-                {
-                    label: "Heart Rate",
-                    fillColor: "rgba(220,220,220,0.2)",
-                    strokeColor: "rgba(220,220,220,1)",
-                    pointColor: "rgba(220,220,220,1)",
-                    pointStrokeColor: "#fff",
-                    pointHighlightFill: "#fff",
-                    pointHighlightStroke: "rgba(220,220,220,1)",
-                    data: response.data
-                },
-            ]
-        };
-        for (i=0; i<response.results;i++) {
-            data.labels.push(i);
-        }
-        var options = {
-            scaleShowGridLines : false,
-            pointDot: false,
-            bezierCurve: false,
-            showScale:false,
-
-        }
-        var myLineChart = new Chart(ctx).Line(data, options);
-        $('#legendDiv').hide();
-    }).done($('#acc-graph-overlay').hide());
+        $.plot($("#hr-plot"), [ response.data ]);
+    }).done($('#hr-plot-overlay').hide());
 </script>
