--- a/web/components/header/header.html
+++ b/web/components/header/header.html
@@ -87,7 +87,7 @@
               <a href="#" class="btn btn-default btn-flat">Profile</a>
             </div>
             <div class="pull-right">
-              <a href="#" class="btn btn-default btn-flat">Sign out</a>
+              <a href="../rest/logout" class="btn btn-default btn-flat" id="logout">Sign out</a>
             </div>
           </li>
         </ul>
