--- a/web/components/header/header.html
+++ b/web/components/header/header.html
@@ -58,18 +58,19 @@
       <li class="dropdown user user-menu">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
           <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-          <span class="hidden-xs">Mario Rossi<span>
+          <span class="hidden-xs"><span id="user-name"></span> <span id="user-surname"></span><span>
         </a>
         <ul class="dropdown-menu">
           <!-- User image -->
           <li class="user-header">
             <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
             <p>
-              Mario Rossi
-              <small>Member since Nov. 2012</small>
+              <span id="user-name"></span> <span id="user-surname"></span>
+                <small><span id="user-sex"></span></small>
+                <small><span id="user-birthdate"></span></small>
             </p>
           </li>
-          <!-- Menu Body -->
+          <!-- Menu Body
           <li class="user-body">
             <div class="col-xs-4 text-center">
               <a href="#">Followers</a>
@@ -80,7 +81,7 @@
             <div class="col-xs-4 text-center">
               <a href="#">Friends</a>
             </div>
-          </li>
+          </li> -->
           <!-- Menu Footer-->
           <li class="user-footer">
             <div class="pull-left">
@@ -95,3 +96,11 @@
     </ul>
   </div>
 </nav>
+    
+<script type="text/javascript">
+    var user = $.parseJSON(Cookies.get('user'));
+    $("#user-name").html(user.name);
+    $("#user-surname").html(user.surname);
+    $("#user-sex").html(user.sex);
+    $("#user-birthdate").html(user.birthdate);
+</script>
