--- a/web/components/plot/hr.html
+++ b/web/components/plot/hr.html
@@ -5,7 +5,7 @@ Filter results based on time
 -->
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Heart Rate Plot</h3>
+        <h3 class="box-title"><i class="fa fa-heartbeat"></i> Heart Rate</h3>
         <div class="pull-right">
             <select name="time-filter" class="form-control select2 select2-hidden-accessible" id="hr-time-selector">
                 <option value="60">1 minute</option>
@@ -17,6 +17,7 @@ Filter results based on time
         </div>
     </div>
     <div class="box-body">
+        <label>BPM</label>
         <div id="hr-plot-canvas" style="width:100%;height:300px"></div>
     </div><!-- /.box-body -->
     <!-- Loading (remove the following to stop the loading) -->
