--- a/web/components/plot/move.html
+++ b/web/components/plot/move.html
@@ -7,36 +7,67 @@ Filter results based on time
     <div class="box-header with-border">
         <h3 class="box-title"><i class="fa fa-maps"></i> Movement Activity</h3>
         <div class="pull-right">
-            <select name="time-filter" class="form-control select2 select2-hidden-accessible" id="electro-time-selector">
-                <option value="60">1 minute</option>
+            <select name="time-filter" class="form-control select2 select2-hidden-accessible" id="move-time-selector">
+                <option value="60" selected>1 minute</option>
                 <option value="300">5 minutes</option>
                 <option value="600">10 minutes</option>
                 <option value="1800">30 minutes</option>
                 <option value="3600">1 hour</option>
-                <option value="7200" selected>2 hours</option>
+                <option value="7200">2 hours</option>
             </select>
         </div>
     </div>
     <div class="box-body">
         <label>microsiemens (μS)</label>
-        <div id="electro-plot-canvas" style="width:100%;height:300px"></div>
+        <div id="move-plot-canvas" style="width:100%;height:300px">
+        </div>
     </div><!-- /.box-body -->
     <!-- Loading (remove the following to stop the loading) -->
-    <div class="overlay" id="electro-plot-overlay">
+    <div class="overlay" id="move-plot-overlay">
         <i class="fa fa-refresh fa-spin"></i>
     </div>
     <!-- end loading -->
 </div><!-- /.box -->
-
-<script type="text/javascript">
-    function load_electro_plot(time) {
-        $.getJSON( "../rest/api/data/eda/test/" + time, function( response ) {
-            console.log(response);
-            $.plot($("#electro-plot-canvas"), [ response.data ]);
-        }).done($('#electro-plot-overlay').hide());
+<style>
+    .move-area {
+        border-radius: 50%;
+        position: absolute;
+        width: 10px;
+        height: 10px;
+        background-color: blueviolet;
+        margin-left: 50%;
+        margin-top: 100px;
     }
-    $("#electro-time-selector").change(function(){
-        load_electro_plot($("#electro-time-selector").val());
+</style>
+<script type="text/javascript">
+    function getRandomColor() {
+        var letters = '0123456789ABCDEF'.split('');
+        var color = '#';
+        for (var i = 0; i < 6; i++ ) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    }
+    function load_move_plot(time) {
+        $.getJSON( "../rest/api/data/acc/test/" + time, function( response ) {
+            var x=0;
+            var y=0;
+            var z=0;
+            for (i=0; i < response.results; i++) {
+                x = parseInt(response.data[i][1][0]) * 2;
+                y = parseInt(response.data[i][1][1]) * 2;
+                z = parseInt(response.data[i][1][2]);
+                size = (50 + z)/8;
+                color=getRandomColor();
+                div = '<div class="move-area" style="left:'+x+'px;top:'+y+'px;width:'+size+'px;height:'+size+'px;background-color:'+color+'"></div>';
+                $("#move-plot-canvas").append(div);
+            }
+        }).done($('#move-plot-overlay').hide());
+    }
+    $("#move-time-selector").change(function(){
+        $("#move-plot-canvas").html("");
+        load_move_plot($("#move-time-selector").val());
     });
-    load_electro_plot(7200);
+    load_move_plot(7200);
+    
 </script>
