Readme and small fixes

--- a/web/components/sidebar/sidebar.html
+++ b/web/components/sidebar/sidebar.html
@@ -9,8 +9,8 @@
         case 'support':
             $("#sidebar-content").load('components/sidebar/support-sidebar.html');
             break;
-        case 'doctor':
-            $("#sidebar-content").load('components/sidebar/doctor-sidebar.html');
+        case 'doc':
+            $("#sidebar-content").load('components/sidebar/doc-sidebar.html');
             break;
         case 'admin':
             $("#sidebar-content").load('components/sidebar/admin-sidebar.html');
