--- a/web/components/header/header.html
+++ b/web/components/header/header.html
@@ -1,9 +1,9 @@
 <!-- Logo -->
 <a href="index.html" class="logo">
   <!-- mini logo for sidebar mini 50x50 pixels -->
-  <span class="logo-mini"><b>E</b></span>
+  <span class="logo-mini"><b>F</b></span>
   <!-- logo for regular state and mobile devices -->
-  <span class="logo-lg">Empatica</span>
+  <span class="logo-lg">FSDA</span>
 </a>
 <!-- Header Navbar: style can be found in header.less -->
 <nav class="navbar navbar-static-top" role="navigation">
