--- a/web/components/main/doc-home.html
+++ b/web/components/main/doc-home.html
@@ -1,4 +1,5 @@
 <section class="content">
+    <h3>Mario Rossi <small>Patient Data</small></h3>
     <div class="row">
         <div class="col-md-12" id="hr-plot"></div> 
     </div>
