--- a/web/components/sidebar/admin-sidebar.html
+++ b/web/components/sidebar/admin-sidebar.html
@@ -1,22 +1,22 @@
 <ul class="sidebar-menu">
     <li class="active treeview">
         <a href="#">
-            <i class="fa fa-calendar-o"></i>
+            <i class="fa fa-user"></i>
             <span>Users</span>
         </a>
         <ul class="treeview-menu">
-            <li><a href="#movements"><i class="fa fa-map"></i> List Users</a></li>
-            <li><a href="#movements"><i class="fa fa-map"></i> Statistics</a></li>
+            <li><a href="#movements"><i class="fa fa-users"></i> List Users</a></li>
+            <li><a href="#movements"><i class="fa fa-area-chart"></i> Statistics</a></li>
         </ul>
     </li>
     <li class="active treeview">
         <a href="#">
-            <i class="fa fa-calendar-o"></i>
+            <i class="fa fa-dashboard"></i>
             <span>Settings</span>
         </a>
         <ul class="treeview-menu">
-            <li><a href="#movements"><i class="fa fa-map"></i> Configuration</a></li>
-            <li><a href="#heart"><i class="fa fa-heartbeat"></i> Tools</a></li>
+            <li><a href="#configuration"><i class="fa fa-gears"></i> Configuration</a></li>
+            <li><a href="#tools"><i class="fa fa-gears"></i> Tools</a></li>
         </ul>
     </li>
 </ul>
