--- a/web/components/sidebar/doc-sidebar.html
+++ b/web/components/sidebar/doc-sidebar.html
@@ -5,8 +5,8 @@
             <span>My Patients</span>
         </a>
         <ul class="treeview-menu">
-            <li><a href="#movements"><i class="fa fa-map"></i> List patients</a></li>
-            <li><a href="#heart"><i class="fa fa-heartbeat"></i> Inbox</a></li>
+            <li><a href="#patients"><i class="fa fa-map"></i> List patients</a></li>
+            <li><a href="#inbox"><i class="fa fa-heartbeat"></i> Inbox</a></li>
         </ul>
     </li>
     <li class="active treeview">
@@ -15,8 +15,8 @@
             <span>Prescriptions</span>
         </a>
         <ul class="treeview-menu">
-            <li><a href="#movements"><i class="fa fa-map"></i> New prescription</a></li>
-            <li><a href="#heart"><i class="fa fa-heartbeat"></i> History</a></li>
+            <li><a href="#new-prescriptions"><i class="fa fa-map"></i> New prescription</a></li>
+            <li><a href="#history-prescriptions"><i class="fa fa-heartbeat"></i> History</a></li>
         </ul>
     </li>
 </ul>
