--- a/web/components/login/login.html
+++ b/web/components/login/login.html
@@ -8,7 +8,7 @@
         <div class="box-body">
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
-                <input name="username" type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                <input name="username" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
             </div>
             <div class="form-group">
                 <label for="exampleInputPassword1">Password</label>
